cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project( fatiga_minimal )
set(CMAKE_CXX_STANDARD 14)
find_package( OpenCV REQUIRED)
find_package( Torch REQUIRED)
add_executable(fatiga_profile main.cpp FaceDetector/face_detector.cpp FacialLandmarks/facial_landmarks.cpp FacialLandmarks/model.cpp ProfileRecognition/profile_recognition.cpp)
target_link_libraries( fatiga_profile ${OpenCV_LIBS} )
target_link_libraries( fatiga_profile ${TORCH_LIBRARIES})